--- a/src/views/annual-report/2020/annual-report.scss
+++ b/src/views/annual-report/2020/annual-report.scss
@@ -1116,7 +1116,7 @@ img.comment-viz{
                 flex-direction: column;
             }
             .text{
-                width: 360px;
+                width: 390px;
                 .larger{
                     font-size: 1.25rem;
                     line-height: 2.5rem;
@@ -1260,11 +1260,11 @@ img.comment-viz{
             }
 
             .flex-content{
-                max-width: 840px;
+                max-width: 940px;
                 width: 100%;
                 margin-top: 50px;
                 text-align: left;
-                @media #{$medium-and-smaller} {
+                @media #{$intermediate-and-smaller} {
                     flex-direction: column;
                     align-items: center;
                     justify-content: center;
@@ -1290,7 +1290,7 @@ img.comment-viz{
                 &.content{
                     justify-content: space-between;
                     .text{
-                        max-width: 360px;
+                        max-width: 460px;
                         width: 100%;
                     }
                     .images{
@@ -1299,6 +1299,10 @@ img.comment-viz{
                         img{
                             width: 100%;
                         }
+                    }
+
+                    @media #{$intermediate} {
+                        max-width: 620px;
                     }
                 }
                 &.lg{
@@ -2389,6 +2393,12 @@ img.comment-viz{
 
 .grid .thumbnail.project {
     box-shadow: none;
+}
+
+.grid {
+    .flex-row {
+        justify-content: center;
+    }
 }
 
 .annual-report-content, #footer {
